feat: adiciona listagem de mensagens por chat
Corrige a listagem de chats do usuário.
